--- a/PinTabs.safariextension/save_tabs.html
+++ b/PinTabs.safariextension/save_tabs.html
@@ -5,19 +5,20 @@
 </head>
 
 <body>
+
   <div class="tabs">
-    <ul id="tabsList">
-    </ul>
+    <ul id="tabsList"></ul>
   </div>
   
 	<form id="tagsForm">
-		<div>
-        <label for="tags">Tags:</label>
-        <input type="text" id="tags" />
+	  <div>
+      <label for="tags">Tags:</label>
+      <input type="text" id="tags" />
     </div>
-		<div class="button">
-			<input type="submit" value="Save">
-		</div>
+	  <div class="button">
+	     <input type="submit" value="Save">
+	  </div>
 	</form>
+	
 </body>
 </html>
