--- a/PinTabs.safariextension/save_tabs.html
+++ b/PinTabs.safariextension/save_tabs.html
@@ -2,6 +2,25 @@
 <html>
 <head>
   <script src="save_tabs.js"></script>
+  <style type="text/css">
+  	html, body {
+  		font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+  		font-size: 12px;
+  	}
+  	ul {
+  		list-style: none;
+  		margin: 0;
+  		padding: 0;
+  	}
+  	.tabs {
+  		margin-bottom: 10px;
+  	}
+  	li {
+  		padding: 5px 0;
+  		border-bottom: 1px solid #CCC;
+  	}
+  	
+  </style>
 </head>
 
 <body>
@@ -9,7 +28,7 @@
   <div class="tabs">
     <ul id="tabsList"></ul>
   </div>
-  
+    
 	<form id="tagsForm">
 	  <div>
       <label for="tags">Tags:</label>
